samples/_failures_safe/1761187854_debbdd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3291e878.c: In function ‘main’:
./samples/SAFE/__tmp_3291e878.c:141:25: error: missing terminating " character
  141 |         fprintf(stderr, "
      |                         ^
./samples/SAFE/__tmp_3291e878.c:141:9: error: expected expression at end of input
  141 |         fprintf(stderr, "
      |         ^~~~~~~
./samples/SAFE/__tmp_3291e878.c:141:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3291e878.c:141:9: error: expected declaration or statement at end of input
